--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,11 @@
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
     "path": "^0.12.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "@langchain/community": "^0.0.18",
+    "@langchain/openai": "^0.0.12",
+    "@supabase/supabase-js": "^2.39.3",
+    "langchain": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
