--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.6",
     "@mui/joy": "^5.0.0-beta.24",
+    "@mui/x-charts": "^6.19.1",
     "@mui/x-tree-view": "^6.17.0",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.11",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
