--- a/server/package.json
+++ b/server/package.json
@@ -12,20 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.0.18",
+    "@langchain/openai": "^0.0.12",
+    "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "langchain": "^0.1.3",
+    "openai": "^4.26.0",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "@langchain/community": "^0.0.18",
-    "@langchain/openai": "^0.0.12",
-    "@supabase/supabase-js": "^2.39.3",
-    "langchain": "^0.1.3"
+    "pgvector": "^0.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
