--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-chat-elements": "^12.0.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.7.4",
     "vite": "^5.0.8"
   },
   "devDependencies": {
