--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "passport-github2": "^0.1.12",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "pgvector": "^0.1.7"
+    "pgvector": "^0.1.7",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
