--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.11",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "socket.io-client": "^4.7.4",
